--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <!-- Libs -->
   <script src="libs/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="css/styles.css"></script>
   <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
   <script src="libs/ember-template-compiler-1.12.0.js"></script>
   <script src="libs/ember-1.12.0.debug.js"></script>
@@ -24,17 +26,17 @@
 
 
   <!-- Routes -->
-  <!-- // <script src="routes/posts.js"></script> -->
+  <script src="routes/products.js"></script>
 
 
 
   <!-- Models -->
-  <!-- // <script src="models/post.js"></script> -->
+  <script src="models/product.js"></script>
 
 
 
 
-  <script>EmberHandlebarsLoader.loadTemplates(['application','catalog']);</script>
+  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item']);</script>
 </head>
 
 <body>
