--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>The Old Republic HyperSpace Universe Show</title>
 
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
   <!-- Libs -->
   <script src="libs/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.js"></script>
-  <script src="css/styles.css"></script>
   <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
   <script src="libs/ember-template-compiler-1.12.0.js"></script>
   <script src="libs/ember-1.12.0.debug.js"></script>
@@ -22,7 +22,9 @@
   <script src="store.js"></script>
 
   <!-- Controllers -->
-  <!-- // <script src="controllers/new-comment.js"></script> -->
+  <script src="controllers/new-item.js"></script>
+  <script src="controllers/products.js"></script>
+  <script src="controllers/product.js"></script>
 
 
   <!-- Routes -->
@@ -36,7 +38,7 @@
 
 
 
-  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item']);</script>
+  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item', 'product']);</script>
 </head>
 
 <body>
