add new auction and auctions

--- a/index.html
+++ b/index.html
@@ -25,20 +25,24 @@
   <script src="controllers/new-item.js"></script>
   <script src="controllers/products.js"></script>
   <script src="controllers/product.js"></script>
+  <script src="controllers/new-auction.js"></script>
+  <script src="controllers/auctions.js"></script>
 
 
   <!-- Routes -->
   <script src="routes/products.js"></script>
+  <script src="routes/auctions.js"></script>
 
 
 
   <!-- Models -->
   <script src="models/product.js"></script>
+  <script src="models/auction.js"></script>
 
 
 
 
-  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item', 'product']);</script>
+  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item', 'product', 'auctions', 'new-auction']);</script>
 </head>
 
 <body>
