--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
   <script src="store.js"></script>
 
   <!-- Controllers -->
-  <script src="controllers/new-item.js"></script>
   <script src="controllers/products.js"></script>
   <script src="controllers/product.js"></script>
   <script src="controllers/new-auction.js"></script>
   <script src="controllers/auctions.js"></script>
+  <script src="controllers/auction.js"></script>
+  <script src="controllers/new-item.js"></script>
 
 
   <!-- Routes -->
   <script src="routes/products.js"></script>
   <script src="routes/auctions.js"></script>
+  <script src="routes/product.js"></script>
+  <script src="routes/auction.js"></script>
 
 
 
@@ -42,7 +45,7 @@
 
 
 
-  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item', 'product', 'auctions', 'new-auction']);</script>
+  <script>EmberHandlebarsLoader.loadTemplates(['application','products', 'new-item', 'product', 'auctions', 'new-auction', 'auction']);</script>
 </head>
 
 <body>
