add element to auctions page to show a carousel with an item form each auction and list out auction information wiht image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>The Old Republic HyperSpace Universe Show</title>
+  <title>Star-Bay</title>
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
