--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <!-- Models -->
   <script src="models/product.js"></script>
   <script src="models/auction.js"></script>
+  <script src="models/bidder.js"></script>
 
 
 
